test/parser/accept/mapping-record-init-f1.ptk
rule r = "" => { x = $0 };