test/parser/reject/bad-mapping-too-long.ptk
# expected: E1112
rule group = "value" => $0 whatever ;